--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,6 @@
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
 
 <div class="hero">
-   
+   <h1 class="text-center text-white">WORK ON UNDER CONSTRUCTION</h1>
 </div>
 {% endblock %}
