--- a/templates/category.html
+++ b/templates/category.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-12 text-center my-5">
-            <img src="/media/{{cat.image}}" class="responsive-img img-fluid" alt="">
+            <img src="/media/{{cat.image}}" class="responsive-img img-fluid w-50" alt="">
             <h1 class="text-center">{{cat.title}}</h1>
         </div>
        
