--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} WELCOME TO IBLOG {% endblock %}
+{% block title %} SPSK {% endblock %}
 {%block content  %}
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
 
