--- a/templates/category.html
+++ b/templates/category.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} WELCOME TO IBLOG {% endblock %}
+{% block title %} SPSK {% endblock %}
 
 
 {%block content  %}
