--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} POST {% endblock %}
+{% block title %} SPSK | POST {% endblock %}
 
 
 {%block content  %}
