--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,5 +9,8 @@
   
 </style>
 <footer class="container-fluid bg-dark my-0 py-3 text-light">
-    <p class="mb-0 text-center" >Copyright © 2020-2021 suryapratapsingh3802@gmail.com</p>
+    <p class="mb-0 text-center">Copyright © 2020-2021 suryapratapsingh3802@gmail.com</p>
+    <p class="text-center mb-0 py-1"><a href="https://www.instagram.com/suryapratapsingh_02"><i style="color: rgb(195, 42, 163);font-size:25px" class="fa fa-instagram pe-4" aria-hidden="true"></i></a>Suryapratapsingh02</p>
+
+    <p class="text-center mb-0 pb-0"><a href="https://m.facebook.com/suryapratapsingh.khangarot.7/"><i style="color: rgb(77, 77, 231);font-size:25px" class="fa fa-facebook-official pe-4" aria-hidden="true"></i></a>Surya Pratap Singh Khangarot</p>
 </footer>
