--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,88 @@
 {% load static %}
 {% block title %} SPSK {% endblock %}
 {%block content  %}
+
+<style>
+   p{
+      font-weight: bolder;
+   }
+</style>
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
 
 <div class="hero">
-   <h1 class="text-center text-white">WORK ON UNDER CONSTRUCTION</h1>
+   <div class="container text-white ">
+      <div class="row mt-5">
+         <div class="col-sm-6 ">
+            Name : Suryapratap Singh Khangarot <br>
+            Mobile No. : 8955383802 <br>
+            Email ID : suryapratapsingh3802@gmail.com
+
+            <div class="mx-auto">
+               <h2 class=" pt-4">MY ACADEMICS</h2>
+               <p class="lead mx-auto">
+                  • Suresh Gyan Vihar University- B.C.A (pursuing) 2020-2023 <br>
+                  • St. Bright Moon Public Sr. Sec. School <br>
+                  Class 12 | Percentage:- 62.14%(RBSE) <br>
+                  • St. Bright Moon Public Sr. Sec. School <br>
+                  Class 10| Percentage:- 55.17%(RBSE) <br>
+
+               </p>
+            </div>
+
+            <h2>TECHNICAL SKILLS</h2>
+            <p class="lead">
+               ● Web Designing (HTML, CSS, JAVASCRIPT, BOOTSTRAP, MATERIALZE CSS) <br>
+               ● Back End (Python + Django) <br>
+               ● Java (Basics) <br>
+               ● Salesforce (CRM) <br>
+               ● Database (SQL Server) <br>
+            </p>
+
+
+            <h2>PERSONAL DETAILS</h2>
+            <p class="lead">
+               ● D.O.B - 6 August 2002 <br>
+               ● Hobbies – Badminton <br>
+
+            </p>
+         
+         </div>
+
+         <div class="col-sm-6">
+            <h2>CAREER OBJECTIVE</h2>
+            <p class="lead">To obtain challenging position to initiate a career that will allow to apply my skills & to
+               accumulate knowledge.</p>
+
+            <h2 class="mt-5">INTERNSHIP & PROJECTS</h2>
+            <p class="lead">
+               • Website Prototype For A Construction Company } Personal Website & Blog (By Python Frame Work Django)
+               <br>
+               • Calculator (By Javascript) <br>
+               • Web Pages (By HTML, CSS) <br>
+            </p>
+
+            <h2>SKILLS</h2>
+            <p class="lead">
+               ● Good Communication <br>
+               ● Leadership Quality <br>
+               ● Punctuality <br>
+            </p>
+
+            <h2>CAREER GUIDANCE BY </h2>
+
+            <p class="lead">
+               &#10004;Vishal Sharma
+               &#10004;Bhupendra Singh Khangarot
+            </p>
+   
+            <h3>SEARCH ME FOR</h3>
+          
+         </div>
+      </div>
+
+      <div class="container  ">
+ 
+      </div>
+   </div>
 </div>
 {% endblock %}
