--- a/templates/header.html
+++ b/templates/header.html
@@ -27,7 +27,7 @@
         </li>
  
         <li class="nav-item">
-          <a class="nav-link active" style="font-size:17px" href="{% url 'about' %}">ABOUT</a>
+          <a class="nav-link active" style="font-size:17px" href="{% url 'about' %}">ABOUT ME</a>
         </li>
 
         <li class="nav-item">
