--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,20 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
     <title>{% block title %} {% endblock %}</title>
+    <style>
+        #loading{
+            width: 100%;
+            height: 100vh;
+            background: #fff url('https://icon-library.com/images/load-icon-gif/load-icon-gif-22.jpg') no-repeat center;
+            position: fixed;
+            z-index: 99999;
+        }
+    </style>
 </head>
 
-<body>
+<body onload="myfuntion()">
+
+    <div id="loading"></div>
     {% include 'header.html' %}
 
     {% block content %}
@@ -61,7 +72,12 @@
         });
     </script>
 
-
+<script>
+    var preloader = document.getElementById("loading");
+    function myfuntion(){
+        preloader.style.display = 'none';
+    }
+</script>
 
     
 </body>
